2019-11-08  Richard Sandiford  <richard.sandiford@arm.com>

	* tree-ssa-sccvn.c (copy_reference_ops_from_ref): Handle
	POLY_INT_CST.

2019-11-08  Richard Sandiford  <richard.sandiford@arm.com>

	* tree-inline.c (declare_return_variable): Check for poly_int_tree_p
	instead of INTEGER_CST.

2019-11-08  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/92324
	* tree-vect-loop.c (vect_create_epilog_for_reduction): Use
	STMT_VINFO_REDUC_VECTYPE for all computations, inserting
	sign-conversions as necessary.
	(vectorizable_reduction): Reject conversions in the chain
	that are not sign-conversions, base analysis on a non-converting
	stmt and its operation sign.  Set STMT_VINFO_REDUC_VECTYPE.
	* tree-vect-stmts.c (vect_stmt_relevant_p): Don't dump anything
	for debug stmts.
	* tree-vectorizer.h (_stmt_vec_info::reduc_vectype): New.
	(STMT_VINFO_REDUC_VECTYPE): Likewise.

2019-11-08  Georg-Johann Lay  <avr@gjlay.de>

	PR target/92055
	* config/avr/avr.opt (-mdouble=, -mlong-double=):
	Fix a missing '-' when displaying these options in the
	help screen.

2019-11-08  Richard Sandiford  <richard.sandiford@arm.com>

	* config/aarch64/iterators.md (SVE_BH, SVE_BHS): Delete.

2019-11-08  Richard Sandiford  <richard.sandiford@arm.com>

	* config/aarch64/aarch64-builtins.c
	(aarch64_builtin_vectorized_function): Remove bswap handling.

2019-11-08  Richard Sandiford  <richard.sandiford@arm.com>

	* tree-core.h (tree_type_common::indivisible_p): New member variable.
	* tree.h (TYPE_INDIVISIBLE_P): New macro.
	* config/aarch64/aarch64-sve-builtins.cc (register_builtin_types):
	Treat the vector types as indivisible.

2019-11-08  Richard Sandiford  <richard.sandiford@arm.com>

	* optabs.def (gather_load_optab, mask_gather_load_optab)
	(scatter_store_optab, mask_scatter_store_optab): Turn into
	conversion optabs, with the offset mode given explicitly.
	* doc/md.texi: Update accordingly.
	* config/aarch64/aarch64-sve-builtins-base.cc
	(svld1_gather_impl::expand): Likewise.